1999-03-22  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* java-stub.el (java-suffix-for-phase): Use S and U instead of _s
	and _u (avoids Unicode chars and is easier to type).
	(java-qualified-name, java-qualified-native-name,
	java-qualified-class-name, java-qualified-native-class-name): New
	functions.
	(java-qualified-interface-name): Use java-qualified-name.
	(java-print-method-name): New function.
	(java-print-native-method, java-print-method): Use it.
	(java-print-native-method): Handle +createBegin before other
	+create* methods, which require use of JINSTANTIATENAME with a
	fully qualified using phase class.
	(*objc-to-java-type-alist*): SEL -> swarm.Selector, not Object.
	(*removed-protocols*): Exclude CompleteVarMap, CustomProbeMap,
	DefaultProbeMap, ProbeLibrary, and ActiveOutFile because of use of
	Class.
	(*removed-methods*): Exclude +customizeBegin:, customizeCopy:, and
	-customizeEnd.  Exclude allocBlock: because of void * return and
	FCall's -setJavaMethod:inObject: and getResult because of void*.
	Exclude setProbedClass:.
	(freaky-message): Use error, not message.
	(java-print-method): Add [disabled, argh] support for
	+createBegin: and +create*/-createEnd to returning typed interface
	objects.  Add protocol argument (for typing info).
	(create-method-p): Don't bother checking for +customizeBegin:.
	(java-print-class-methods-in-phase,
	java-print-interface-methods-in-phase): Accomodate.

1999-03-21  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* java-stub.el (java-qualified-interface-name): New function.
	(java-print-implemented-interfaces-list): Use it.
	(java-print-import, java-print-imports): Remove.
	(java-print-class-phase-to-file,
	java-print-interface-phase-to-file): Don't call
	java-print-imports.
	(java-print-native-method): Put two underlines after method name,
	not one.

	* Makefile.am (SWARM_EXTRA_DIST): Add
	swarm/NonUniqueMethodSignatureException.java and
	swarm/SignatureNotFoundException.java.
